Use Functional instead of a MessageQueue for messages to the LayerTreeHostProxy renderer. https://bugs.webkit.org/show_bug.cgi?id=79478

This makes a lot of the broilerplate code for message-passing unnecessary, and
results in a much more succinct implementation.

Patch by Huang Dongsung <luxtella@company100.net> on 2012-02-26
Reviewed by Noam Rosenthal.

* UIProcess/LayerTreeHostProxy.h:
(WebKit):
(LayerTreeHostProxy):
* UIProcess/qt/LayerTreeHostProxyQt.cpp:
(WebKit):
(WebKit::LayerTreeHostProxy::updateTile):
(WebKit::LayerTreeHostProxy::createImage):
(WebKit::LayerTreeHostProxy::syncRemoteContent):
(WebKit::LayerTreeHostProxy::dispatchUpdate):
(WebKit::LayerTreeHostProxy::createTileForLayer):
(WebKit::LayerTreeHostProxy::updateTileForLayer):
(WebKit::LayerTreeHostProxy::removeTileForLayer):
(WebKit::LayerTreeHostProxy::deleteCompositingLayer):
(WebKit::LayerTreeHostProxy::setRootCompositingLayer):
(WebKit::LayerTreeHostProxy::syncCompositingLayerState):
(WebKit::LayerTreeHostProxy::didRenderFrame):
(WebKit::LayerTreeHostProxy::createDirectlyCompositedImage):
(WebKit::LayerTreeHostProxy::destroyDirectlyCompositedImage):

Canonical link: https://commits.webkit.org/96721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108951 268f45cc-cd09-0410-ab3c-d52691b4dbfc